packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/reject/TTRP-SQL-015.ttrp
// expect: TTRP-SQL-015
container c target erp_pg """sql
SELECT FROM
"""
